# sgp30_rs

./: Cargo.toml  LICENSE  README.md
examples/raspberry_pi/: Cargo.toml
examples/raspberry_pi/.cargo/: config
examples/raspberry_pi/src/: main.rs
src/: lib.rs
tests/: i2c_tests.rs
